# playwright-python-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  playwright.config.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/api/: client.py
src/config/: settings.py
tests/api/: test_api_example.py
tests/e2e/: test_e2e_example.py
